--- a/wedding.html
+++ b/wedding.html
@@ -51,6 +51,18 @@
 		</div>
 	  </nav>
 
+	  <div id="tahoe" class="view">
+	  	<div id="full-bg-img flex-center">
+	  		<ul>
+	  			<li>
+	  				<h1 class="h1-responsive">Allison and Matt</h1>
+	  				<h2 class="h2-responsive">March 29, 2019 ⚬ Asheville, NC</h2>
+	  			</li>
+	  		</ul>
+	  	</div>
+	  	
+	  </div>
+
 		<div class="jumbotron">
 			<div class="container">
 				<div id="main-content">
