Added Intro-captain SVG
Added svg and made it responsive to page resize - can't decide on tahoe photo, need to make svg larger

--- a/wedding.html
+++ b/wedding.html
@@ -53,15 +53,19 @@
 		  	</nav>
 
 		<div id="tahoe">
-		  	<div id="tahoe-caption">
-		  		<h1 class="display-2">Allison and Matt</h1>
-		  		<h2>March 29, 2019 ⚬ Asheville, NC</h2>
-		  		<!-- RSVP Button 
-					<p> 
-						<a class="btn btn-outline-light" href="relative path of RSVP form">RSVP »</a> 
-					</p>
-				-->	
-		  	</div>
+			<div class="container">
+				<div class="intro-caption">
+			  		<div>
+			  			<img src="aandm.svg" class="img-fluid" alt="Allison and Matt March 29, 2019 Asheville, NC">
+			  		</div>
+			  		<!-- RSVP Button 
+						<p> 
+							<a class="btn btn-outline-light" href="relative path of RSVP form">RSVP »</a> 
+						</p>
+					-->	
+			  	</div>	
+			</div>
+		  	
 		</div>
 
 	<!-- Bootstrap 4 jQuery and js -->
