Finalized Intro-caption
Made introcaption bigger and changed '&'. Slimmed down svgs no longer needed

--- a/wedding.html
+++ b/wedding.html
@@ -20,7 +20,7 @@
 
 				<!-- Navbar: Brand -->
 				<a class="navbar-brand d-lg-none" href="http://www.allisonmatt.com/">
-					<img src="altcopy.svg" alt="Brand">
+					<img src="amlogo.svg" alt="Brand">
 				</a>
 
 				<!-- Navbar: Toggler -->
@@ -39,7 +39,7 @@
 					
 					<!-- Navbar: Brand -->
 					<a class="navbar-brand d-none d-lg-flex" href="http://www.allisonmatt.com/">
-					  	<img src="altcopy.svg" alt="Brand">
+					  	<img src="amlogo.svg" alt="Brand">
 					</a>
 
 					<!-- Navbar navigation: Right -->
@@ -56,7 +56,7 @@
 			<div class="container">
 				<div class="intro-caption">
 			  		<div>
-			  			<img src="aandm.svg" class="img-fluid" alt="Allison and Matt March 29, 2019 Asheville, NC">
+			  			<img src="introcaption.svg" class="img-fluid" alt="Allison and Matt March 29, 2019 Asheville, NC">
 			  		</div>
 			  		<!-- RSVP Button 
 						<p> 
