--- a/wedding.html
+++ b/wedding.html
@@ -1,7 +1,7 @@
-<!-- Home Page -->
-<!-- nav bar (Venue) AM (Photos) -->
-<!-- ALLISON & MATT -->
-<!-- SAVE THE DATE, 03.29.19 Asheville, North Carolina -->
+<!-- Landing Page -->
+<!-- nav bar (Venue) Brand (Photos) -->
+<!-- Intro Caption w/locaton -->
+<!-- RSVP Button -->
 
 <!DOCTYPE html>
 <html lang="en">
