Gallery Page and Link
Also edited logo slightly

--- a/wedding.html
+++ b/wedding.html
@@ -45,7 +45,7 @@
 					<!-- Navbar navigation: Right -->
 					<ul class="navbar-nav ml-auto">
 				    	<li class="nav-item">
-				        	<a class="nav-link" href="relativepathtophotos">Photos</a>
+				        	<a class="nav-link" href="gallery.html">Photos</a>
 				      	</li>
 				    </ul>
 				</div>
@@ -59,10 +59,9 @@
 			  			<img src="introcaption.svg" class="img-fluid" alt="Allison and Matt March 29, 2019 Asheville, NC">
 			  		</div>
 			  		<!-- RSVP Button 
-						<p> 
-							<a class="btn btn-outline-light" href="relative path of RSVP form">RSVP »</a> 
-						</p>
-					-->	
+					<p> 
+					<a class="btn btn-outline-light" href="relative path of RSVP form">RSVP</a> 
+					</p> -->		
 			  	</div>	
 			</div>
 		  	
