Started Venue Page
Fixed .navbar-brand img padding, still don't know why showing slightly to the left, worked on the gallery page content need to implement the grid system to arange content

--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-
 </head>
+
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark">
 
@@ -27,12 +27,12 @@
 		  	<!-- Navbar navigation: Left -->
 		    <ul class="navbar-nav mr-auto">
 		      	<li class="nav-item">
-		        	<a class="nav-link" href="https://yesterdayspaces.com/">Venue</a>
+		        	<a class="nav-link" href="venue.html">Venue</a>
 		      	</li>
 		    </ul>
 			
 			<!-- Navbar: Brand -->
-			<a class="navbar-brand d-none d-lg-flex" href="http://www.allisonmatt.com/">
+			<a class="navbar-brand d-none d-lg-flex" href="wedding.html">
 			  	<img src="amlogo.svg" alt="Brand">
 			</a>
 
@@ -45,7 +45,7 @@
 		</div>
   	</nav>
 
-<section>
+<section class="gallery">
 	<div class="container-fluid">
 		<div class="d-flex flex-row flex-wrap justify-content-center">
 			<div class="d-flex flex-column">
