Editing Photo Location

--- a/gallery.html
+++ b/gallery.html
@@ -49,33 +49,33 @@
 	<div class="container-fluid">
 		<div class="d-flex flex-row flex-wrap justify-content-center">
 			<div class="d-flex flex-column">
-				<a href="../Gallery/Jezzie/2.jpg"><img src="../Gallery/Jezzie/2.jpg" class="img-fluid" alt="Jezzie">
-				<a href="../Gallery/Shoes/hungaryshoes.jpeg"><img src="../Gallery/Shoes/hungaryshoes.jpeg" class="img-fluid" alt="Hungary shoes">
-				<a href="../Gallery/Us/mattireland.jpeg"><img src="../Gallery/Us/mattireland.jpeg" class="img-fluid" alt="Ireland">
-				<a href="../Gallery/Us/fortfunston.jpg"><img src="../Gallery/Us/fortfunston.jpg" class="img-fluid" alt="Fort Funston">
+				<a href="./Gallery/Jezzie/2.jpg"><img src="./Gallery/Jezzie/2.jpg" class="img-fluid" alt="Jezzie">
+				<a href="./Gallery/Shoes/hungaryshoes.jpeg"><img src="./Gallery/Shoes/hungaryshoes.jpeg" class="img-fluid" alt="Hungary shoes">
+				<a href="./Gallery/Us/mattireland.jpeg"><img src="./Gallery/Us/mattireland.jpeg" class="img-fluid" alt="Ireland">
+				<a href="./Gallery/Us/fortfunston.jpg"><img src="./Gallery/Us/fortfunston.jpg" class="img-fluid" alt="Fort Funston">
 
 			</div>
 
 			<div class="d-flex flex-column">
-				<a href="../Gallery/Us/grad.jpg"><img src="../Gallery/Us/grad.jpg" class="img-fluid" alt="Graduation">
-				<a href="../Gallery/Shoes/bridgeshoes.jpeg"><img src="../Gallery/Shoes/bridgeshoes.jpeg" class="img-fluid" alt="Bridge shoes">
-				<a href="../Gallery/Us/haha.jpg"><img src="../Gallery/Us/haha.jpg" class="img-fluid" alt="Funny photo with crown on">
-				<a href="../Gallery/Jezzie/3.jpg"><img src="../Gallery/Jezzie/3.jpg" class="img-fluid" alt="Jezzie">
+				<a href="./Gallery/Us/grad.jpg"><img src="./Gallery/Us/grad.jpg" class="img-fluid" alt="Graduation">
+				<a href="./Gallery/Shoes/bridgeshoes.jpeg"><img src="./Gallery/Shoes/bridgeshoes.jpeg" class="img-fluid" alt="Bridge shoes">
+				<a href="./Gallery/Us/haha.jpg"><img src="./Gallery/Us/haha.jpg" class="img-fluid" alt="Funny photo with crown on">
+				<a href="./Gallery/Jezzie/3.jpg"><img src="./Gallery/Jezzie/3.jpg" class="img-fluid" alt="Jezzie">
 			</div>
 
 			<div class="d-flex flex-column">
-				<a href="../Gallery/Shoes/bigsurshoes.jpeg"><img src="../Gallery/Shoes/bigsurshoes.jpeg" class="img-fluid" alt="Big sur shoes">
-				<a href="../Gallery/Jezzie/4.jpg"><img src="../Gallery/Jezzie/4.jpg" class="img-fluid" alt="Jezzie">
-				<a href="../Gallery/Us/bikes.jpg"><img src="../Gallery/Us/bikes.jpg" class="img-fluid" alt="Bikes">
-				<a href="../Gallery/Us/portugal.jpg"><img src="../Gallery/Us/portugal.jpg" class="img-fluid" alt="Next to rock">
+				<a href="./Gallery/Shoes/bigsurshoes.jpeg"><img src="./Gallery/Shoes/bigsurshoes.jpeg" class="img-fluid" alt="Big sur shoes">
+				<a href="./Gallery/Jezzie/4.jpg"><img src="./Gallery/Jezzie/4.jpg" class="img-fluid" alt="Jezzie">
+				<a href="./Gallery/Us/bikes.jpg"><img src="./Gallery/Us/bikes.jpg" class="img-fluid" alt="Bikes">
+				<a href="./Gallery/Us/portugal.jpg"><img src="./Gallery/Us/portugal.jpg" class="img-fluid" alt="Next to rock">
 
 			</div>
 
 			<div class="d-flex flex-column">
-				<a href="../Gallery/Jezzie/6.jpg"><img src="../Gallery/Jezzie/6.jpg" class="img-fluid" alt="Jezzie">
-				<a href="../Gallery/Us/hands.jpeg"><img src="../Gallery/Us/hands.jpeg" class="img-fluid" alt="Ring on Hand">
-				<a href="../Gallery/Shoes/trainshoes.jpg"><img src="../Gallery/Shoes/trainshoes.jpg" class="img-fluid" alt="Train shoes">
-				<a href="../Gallery/Jezzie/5.jpeg"><img src="../Gallery/Jezzie/5.jpeg" class="img-fluid" alt="Jezzie">
+				<a href="./Gallery/Jezzie/6.jpg"><img src="./Gallery/Jezzie/6.jpg" class="img-fluid" alt="Jezzie">
+				<a href="./Gallery/Us/hands.jpeg"><img src="./Gallery/Us/hands.jpeg" class="img-fluid" alt="Ring on Hand">
+				<a href="./Gallery/Shoes/trainshoes.jpg"><img src="./Gallery/Shoes/trainshoes.jpg" class="img-fluid" alt="Train shoes">
+				<a href="./Gallery/Jezzie/5.jpeg"><img src="./Gallery/Jezzie/5.jpeg" class="img-fluid" alt="Jezzie">
 			</div>
 		</div>		
 	</div>	
